[package]
name = "rust-demystified"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"]}

[dev-dependencies]
anyhow = "1"